--- a/assignment/About.html
+++ b/assignment/About.html
@@ -53,14 +53,14 @@
         <br>
         <p>Our Lawyers are ready, willing to assist you.</p>
         <div class="social">
-        <p class="gg6"><i class="fa fa-phone" style="color: black; font-size:20px">phone:</i><br>
+        <p class="gg6"><i class="fa fa-phone" style="color: black; font-size:20px">phone:</i>
         08032688831 | 08050504174 <br>
         <br>
-        <i class="fa fa-envelope-o" style="color: black; font-size:20px"> Email:</i><br>
+        <i class="fa fa-envelope-o" style="color: black; font-size:20px"> Email:</i>
         <br>
         info@gokeijiola.com <br>
         <br>
-        <i class="fa fa-map-marker" style="color: black; font-size:20px">Address</i><br>
+        <i class="fa fa-map-marker" style="color: black; font-size:20px">Address</i>
         <br>
         H - 535. Road 3. Ikota Shopping Complex, VGC,
         <br>
