--- a/assignment/PRACTICE AREA.html
+++ b/assignment/PRACTICE AREA.html
@@ -41,7 +41,9 @@
          - Debt Recovery<br>
          - Oil, Gas and Energy<br>
          - Arbitration and Mediation<br>
-         <!-- - Intellectual Property<br>
+
+         <div>
+             - Intellectual Property<br>
          - Government Affairs & Regulatory Issues<br>
         Real Estate Transactions: We handle all aspects of real estate transactions, as well as real<br> estate litigation. Our lawyers provide skilled legal counsel to clients involved in a wide <br> range of real estate transactions. We represent buyers and sellers in complex real estate <br> purchase and sale transactions, leases and subleases on behalf of landlords  and <br> tenants. Whether you are buying, selling, leasing or playing any other role in a real estate <br> transaction, contact us to get sophisticated legal counsel to assist you with the pursuit of <br> a successful outcome.<br>
             <br>
@@ -61,8 +63,10 @@
          <br>
           Government Affairs & Regulatory Issues: Today's business environment is frequently <br> clouded by state and local regulations, policies and new legislation, which can have <br> significant impact on the cost and operation of your business, organization or profession.<br> Having the right person in your corner to advocate on your behalf can be a crucial factor <br> in your organization’s success. When selecting your advisors, you need a team with the <br> right relationships, the political intelligence, the legal knowledge and a reputation for <br> delivering results. Our team brings together deep regulatory knowledge and policy <br> advocacy experience with local insight. We deliver results on a local or international level.<br>
         <br>
- -->
 
+
+         </div>
+        
        </p>
     </div>
     <br>
